--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button type="submit">Kirim Pesan</button>
     </form>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
