--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
             <p>&copy; 2024 Your Name</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
